# DistributedKernelKmeans

./: .gitignore  .viprc  CMakeLists.txt  Doxyfile  README.md
cmake/: TestFileOffsetBits.c  TestLargeFiles.c.cmakein  TestLargeFiles.cmake
dkk/: main.cpp
dkk_lib/include/: Array2D.h  Communicator.h  Config.h.in  Configurator.h  DistributedArray2D.h  Driver.h  Exception.h  FileUtils.h  Initializer.h  Iterator.h  Kernel.h  Primitive.h  Random.h  Reader.h  Types.h  Types.h.in  Unit.h  Utils.h  WindowsExport.h  Worker.h
dkk_lib/src/: Communicator.cpp  Configurator.cpp  FileUtils.cpp  Random.cpp  Unit.cpp  Worker.cpp
dkk_plg_cuda/include/: CUDADstPrimitive.h  CUDAWorker.h  PluginCudaWindowsExport.h
dkk_plg_cuda/src/: CUDADstPrimitive.cu  CUDAWorker.cpp  PluginRegister.cpp
dkk_plg_default/include/: CPUDstPrimitive.h  CPUGaussianEuclideanPrimitive.h  CPUWorker.h  CSVReader.h  DstPrimitive.h  ExplicitInitializer.h  GaussianEuclideanPrimitive.h  GaussianKernel.h  KPPInitializer.h  MNISTReader.h  PluginDefaultWindowsExport.h  RandomInitializer.h  SimpleDriver.h  SimpleIterator.h  XTCReader.h
dkk_plg_default/src/: CPUDstPrimitive.cpp  CPUGaussianEuclideanPrimitive.cpp  CPUWorker.cpp  CSVReader.cpp  ExplicitInitializer.cpp  GaussianKernel.cpp  KPPInitializer.cpp  MNISTReader.cpp  PluginRegister.cpp  RandomInitializer.cpp  SimpleDriver.cpp  SimpleIterator.cpp  XTCReader.cpp
dkk_plg_fermi/include/: GlobalCostDriver.h  MNISTCachedReader.h  PluginFermiWindowsExport.h  SubsampleDriver.h
dkk_plg_fermi/src/: GlobalCostDriver.cpp  MNISTCachedReader.cpp  PluginRegister.cpp  SubsampleDriver.cpp
test/: 10C_2000_2D.cfg  10C_2000_2D.cst  10C_2000_2D.in  10C_2000_2D.out
